# DeepScout2

./: .gitignore  .replit  README.md  claude_api.py  database.py  main.py  pasted_text_1726142673572.txt  pasted_text_1726148463755.txt  pasted_text_1726148572302.txt  pasted_text_1726155590448.txt  pasted_text_1726159651159.txt  perplexity_api.py  pyproject.toml  utils.py
home/runner/DeepTechDealNavigator/stages/: sector_selector.py
stages/: deal_sourcer.py  sector_selector.py  startup_finder.py  tech_risk_assessor.py
